# henri

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
notebooks/: figures.ipynb  figures_perturbed_density.ipynb  grhd.ipynb  grhd_test.ipynb  grhd_tov.ipynb  k-matrix-computation.ipynb  numerical-example.ipynb  tov-correct-eos.ipynb  tov-final.ipynb  tov.ipynb  xcfc.ipynb
notebooks/data/: tov.ipynb
notebooks/plots/: plots.ipynb
notebooks/validation-notebooks/: Extension_Schwarzschild.ipynb  Extension_Stepping_Phase_Space.ipynb  Gaussian_Process_ODE_TOV_sol.ipynb  Nonlinear_implementation.ipynb
notebooks/validation-notebooks/Frederik/: tov_Lindblom.ipynb  xCFC.ipynb
notebooks/validation-notebooks/Old/: Extension_Basic_Primal_Implementation.ipynb  Extension_Schwarzschild.ipynb  Gaussian_Process_ODE_TOV_sol.ipynb  Perturbation_of_alpha_psi.ipynb  Schwarzschild.ipynb  Uncertainty_Inspection_with_Training_Test_Data.ipynb  Validation_Basic_Primal_Implementation.ipynb
notebooks/validation-notebooks/Relevant/: 2_Non_Linear-Alpha-Psi.ipynb  2_Non_Linear-Psi.ipynb  2_Non_Linear.ipynb  Discretizaton_Test.ipynb  Extension_Stepping_Phase_Space.ipynb  Linear_Implementation_Stepping_Throughout_Phase_Space.ipynb  Non_Linear_Implementation.ipynb  Nonlinear_implementation.ipynb  Uncertainty_Aware_Collocation_Point_Selection.ipynb  Validation_Towards_Correct_Solution.ipynb
src/henri/: __init__.py
src/henri/grhd/: __init__.py  cons2prim.py  eos.py  grhd.py
tests/: test_cons2prim.py
